# ActorShadows

./: ActorShadows.ini  ActorShadows.json  CMakeLists.txt  PCH.h  PlayerShadows.ini  README.md  main.cpp  plugin.cpp  plugin.cpp.backup  vcpkg-configuration.json
Data/SKSE/Plugins/ActorShadows/: Candlelight.json  QwibLantern_002301.json  QwibLantern_003DF3.json  Torch01.json
example-configs/: QwibLantern_000D63.json  QwibLantern_001D96.json
src/: Config.cpp  Config.h  EventListeners.cpp  EventListeners.h  Globals.cpp  Globals.h  Helper.cpp  Helper.h  LightHelpers.cpp  LightHelpers.h  LightManager.cpp  LightManager.h  ShadowCounter.cpp  ShadowCounter.h  TorchManager.cpp  TorchManager.h  UpdateLogic.cpp  UpdateLogic.h  main.cpp
src/actor/: ActorTracker.cpp  ActorTracker.h  TrackedActor.cpp  TrackedActor.h
src/core/: Config.cpp  Config.h  Globals.cpp
src/events/: CellListener.cpp  EquipListener.cpp  EquipListener.h  SpellCastListener.cpp
src/listeners/: CellListener.cpp  CellListener.h  EquipListener.cpp  SpellCastListener.cpp  SpellCastListener.h
src/utils/: ActorLight.cpp  ActorLight.h  ActorTracker.cpp  ActorTracker.h  Cleanup.cpp  Cleanup.h  Console.cpp  Console.h  Helpers.cpp  Helpers.h  Light.cpp  Light.h  MagicEffect.cpp  MagicEffect.h  ShadowAllocator.cpp  ShadowAllocator.h  ShadowCounter.cpp  ShadowCounter.h  Transforms.cpp  Transforms.h
